postscript/Web/parser.output
   0  $accept : %entry% $end

   1  start : fundecl_list FUNDECLDEF fundefn_list EOF
   2        | fundefn_list EOF

   3  fundecl_list :
   4               | fundecl SEMICOLON fundecl_list

   5  fundefn_list :
   6               | fundefn fundefn_list

   7  fundefn : fundecl LBRACE block_item_list_opt RBRACE

   8  fundecl : TP IDENTIFIER LPAREN vardecl_comma_list_opt RPAREN

   9  vardecl_comma_list_opt :
  10                         | TP IDENTIFIER
  11                         | TP IDENTIFIER COMMA vardecl_comma_list_opt

  12  block_item_list_opt : block_item
  13                      | block_item block_item_list_opt

  14  block_item : IF_KW LPAREN exp RPAREN LBRACE block_item_list_opt RBRACE if_fstat
  15             | RETURN_KW exp SEMICOLON
  16             | BREAK_KW SEMICOLON
  17             | CONTINUE_KW SEMICOLON
  18             | WHILE_KW LPAREN exp RPAREN LBRACE block_item_list_opt RBRACE
  19             | DO_KW LBRACE block_item_list_opt RBRACE WHILE_KW LPAREN exp RPAREN SEMICOLON
  20             | IDENTIFIER EQ exp SEMICOLON
  21             | IDENTIFIER LPAREN args RPAREN SEMICOLON

  22  if_fstat :
  23           | ELSE_KW LBRACE block_item_list_opt RBRACE

  24  exp : INTCONSTANT
  25      | FLOATCONSTANT
  26      | STRINGCONSTANT
  27      | BOOLCONSTANT
  28      | LPAREN exp RPAREN
  29      | exp PLUS exp
  30      | exp PLUSF exp
  31      | exp MINUS exp
  32      | exp MINUSF exp
  33      | exp TIMES exp
  34      | exp TIMESF exp
  35      | exp DIV exp
  36      | exp DIVF exp
  37      | exp MOD exp
  38      | exp BCEQ exp
  39      | exp BCLT exp
  40      | exp BCLE exp
  41      | exp BCGT exp
  42      | exp BCGE exp
  43      | exp BCNE exp
  44      | exp BLAND exp
  45      | exp BLOR exp
  46      | IDENTIFIER
  47      | exp QMARK exp COLON exp
  48      | IDENTIFIER LPAREN args RPAREN

  49  args :
  50       | exp
  51       | exp COMMA args

  52  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (52)
	fundecl_list : .  (3)
	fundefn_list : .  (5)

	TP  shift 3
	EOF  reduce 5
	FUNDECLDEF  reduce 3

	start  goto 4
	fundecl_list  goto 5
	fundefn_list  goto 6
	fundecl  goto 7
	fundefn  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	fundecl : TP . IDENTIFIER LPAREN vardecl_comma_list_opt RPAREN  (8)

	IDENTIFIER  shift 9
	.  error


state 4
	%entry% : '\001' start .  (52)

	.  reduce 52


state 5
	start : fundecl_list . FUNDECLDEF fundefn_list EOF  (1)

	FUNDECLDEF  shift 10
	.  error


state 6
	start : fundefn_list . EOF  (2)

	EOF  shift 11
	.  error


state 7
	fundecl_list : fundecl . SEMICOLON fundecl_list  (4)
	fundefn : fundecl . LBRACE block_item_list_opt RBRACE  (7)

	LBRACE  shift 12
	SEMICOLON  shift 13
	.  error


state 8
	fundefn_list : fundefn . fundefn_list  (6)
	fundefn_list : .  (5)

	TP  shift 3
	EOF  reduce 5

	fundefn_list  goto 14
	fundecl  goto 15
	fundefn  goto 8


state 9
	fundecl : TP IDENTIFIER . LPAREN vardecl_comma_list_opt RPAREN  (8)

	LPAREN  shift 16
	.  error


state 10
	start : fundecl_list FUNDECLDEF . fundefn_list EOF  (1)
	fundefn_list : .  (5)

	TP  shift 3
	EOF  reduce 5

	fundefn_list  goto 17
	fundecl  goto 15
	fundefn  goto 8


state 11
	start : fundefn_list EOF .  (2)

	.  reduce 2


state 12
	fundefn : fundecl LBRACE . block_item_list_opt RBRACE  (7)

	IDENTIFIER  shift 18
	IF_KW  shift 19
	DO_KW  shift 20
	WHILE_KW  shift 21
	BREAK_KW  shift 22
	CONTINUE_KW  shift 23
	RETURN_KW  shift 24
	.  error

	block_item_list_opt  goto 25
	block_item  goto 26


state 13
	fundecl_list : fundecl SEMICOLON . fundecl_list  (4)
	fundecl_list : .  (3)

	TP  shift 3
	FUNDECLDEF  reduce 3

	fundecl_list  goto 27
	fundecl  goto 28


state 14
	fundefn_list : fundefn fundefn_list .  (6)

	.  reduce 6


state 15
	fundefn : fundecl . LBRACE block_item_list_opt RBRACE  (7)

	LBRACE  shift 12
	.  error


state 16
	fundecl : TP IDENTIFIER LPAREN . vardecl_comma_list_opt RPAREN  (8)
	vardecl_comma_list_opt : .  (9)

	TP  shift 29
	RPAREN  reduce 9

	vardecl_comma_list_opt  goto 30


state 17
	start : fundecl_list FUNDECLDEF fundefn_list . EOF  (1)

	EOF  shift 31
	.  error


state 18
	block_item : IDENTIFIER . EQ exp SEMICOLON  (20)
	block_item : IDENTIFIER . LPAREN args RPAREN SEMICOLON  (21)

	LPAREN  shift 32
	EQ  shift 33
	.  error


state 19
	block_item : IF_KW . LPAREN exp RPAREN LBRACE block_item_list_opt RBRACE if_fstat  (14)

	LPAREN  shift 34
	.  error


state 20
	block_item : DO_KW . LBRACE block_item_list_opt RBRACE WHILE_KW LPAREN exp RPAREN SEMICOLON  (19)

	LBRACE  shift 35
	.  error


state 21
	block_item : WHILE_KW . LPAREN exp RPAREN LBRACE block_item_list_opt RBRACE  (18)

	LPAREN  shift 36
	.  error


state 22
	block_item : BREAK_KW . SEMICOLON  (16)

	SEMICOLON  shift 37
	.  error


state 23
	block_item : CONTINUE_KW . SEMICOLON  (17)

	SEMICOLON  shift 38
	.  error


state 24
	block_item : RETURN_KW . exp SEMICOLON  (15)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 45


state 25
	fundefn : fundecl LBRACE block_item_list_opt . RBRACE  (7)

	RBRACE  shift 46
	.  error


state 26
	block_item_list_opt : block_item .  (12)
	block_item_list_opt : block_item . block_item_list_opt  (13)

	IDENTIFIER  shift 18
	IF_KW  shift 19
	DO_KW  shift 20
	WHILE_KW  shift 21
	BREAK_KW  shift 22
	CONTINUE_KW  shift 23
	RETURN_KW  shift 24
	RBRACE  reduce 12

	block_item_list_opt  goto 47
	block_item  goto 26


state 27
	fundecl_list : fundecl SEMICOLON fundecl_list .  (4)

	.  reduce 4


state 28
	fundecl_list : fundecl . SEMICOLON fundecl_list  (4)

	SEMICOLON  shift 13
	.  error


state 29
	vardecl_comma_list_opt : TP . IDENTIFIER  (10)
	vardecl_comma_list_opt : TP . IDENTIFIER COMMA vardecl_comma_list_opt  (11)

	IDENTIFIER  shift 48
	.  error


state 30
	fundecl : TP IDENTIFIER LPAREN vardecl_comma_list_opt . RPAREN  (8)

	RPAREN  shift 49
	.  error


state 31
	start : fundecl_list FUNDECLDEF fundefn_list EOF .  (1)

	.  reduce 1


state 32
	block_item : IDENTIFIER LPAREN . args RPAREN SEMICOLON  (21)
	args : .  (49)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	RPAREN  reduce 49

	exp  goto 50
	args  goto 51


state 33
	block_item : IDENTIFIER EQ . exp SEMICOLON  (20)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 52


state 34
	block_item : IF_KW LPAREN . exp RPAREN LBRACE block_item_list_opt RBRACE if_fstat  (14)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 53


state 35
	block_item : DO_KW LBRACE . block_item_list_opt RBRACE WHILE_KW LPAREN exp RPAREN SEMICOLON  (19)

	IDENTIFIER  shift 18
	IF_KW  shift 19
	DO_KW  shift 20
	WHILE_KW  shift 21
	BREAK_KW  shift 22
	CONTINUE_KW  shift 23
	RETURN_KW  shift 24
	.  error

	block_item_list_opt  goto 54
	block_item  goto 26


state 36
	block_item : WHILE_KW LPAREN . exp RPAREN LBRACE block_item_list_opt RBRACE  (18)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 55


state 37
	block_item : BREAK_KW SEMICOLON .  (16)

	.  reduce 16


state 38
	block_item : CONTINUE_KW SEMICOLON .  (17)

	.  reduce 17


state 39
	exp : IDENTIFIER .  (46)
	exp : IDENTIFIER . LPAREN args RPAREN  (48)

	LPAREN  shift 56
	PLUS  reduce 46
	MINUS  reduce 46
	TIMES  reduce 46
	DIV  reduce 46
	MOD  reduce 46
	PLUSF  reduce 46
	MINUSF  reduce 46
	TIMESF  reduce 46
	DIVF  reduce 46
	RPAREN  reduce 46
	COMMA  reduce 46
	SEMICOLON  reduce 46
	COLON  reduce 46
	QMARK  reduce 46
	BCEQ  reduce 46
	BCGE  reduce 46
	BCGT  reduce 46
	BCLE  reduce 46
	BCLT  reduce 46
	BCNE  reduce 46
	BLAND  reduce 46
	BLOR  reduce 46


state 40
	exp : STRINGCONSTANT .  (26)

	.  reduce 26


state 41
	exp : FLOATCONSTANT .  (25)

	.  reduce 25


state 42
	exp : BOOLCONSTANT .  (27)

	.  reduce 27


state 43
	exp : INTCONSTANT .  (24)

	.  reduce 24


state 44
	exp : LPAREN . exp RPAREN  (28)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 57


state 45
	block_item : RETURN_KW exp . SEMICOLON  (15)
	exp : exp . PLUS exp  (29)
	exp : exp . PLUSF exp  (30)
	exp : exp . MINUS exp  (31)
	exp : exp . MINUSF exp  (32)
	exp : exp . TIMES exp  (33)
	exp : exp . TIMESF exp  (34)
	exp : exp . DIV exp  (35)
	exp : exp . DIVF exp  (36)
	exp : exp . MOD exp  (37)
	exp : exp . BCEQ exp  (38)
	exp : exp . BCLT exp  (39)
	exp : exp . BCLE exp  (40)
	exp : exp . BCGT exp  (41)
	exp : exp . BCGE exp  (42)
	exp : exp . BCNE exp  (43)
	exp : exp . BLAND exp  (44)
	exp : exp . BLOR exp  (45)
	exp : exp . QMARK exp COLON exp  (47)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIV  shift 61
	MOD  shift 62
	PLUSF  shift 63
	MINUSF  shift 64
	TIMESF  shift 65
	DIVF  shift 66
	SEMICOLON  shift 67
	QMARK  shift 68
	BCEQ  shift 69
	BCGE  shift 70
	BCGT  shift 71
	BCLE  shift 72
	BCLT  shift 73
	BCNE  shift 74
	BLAND  shift 75
	BLOR  shift 76
	.  error


state 46
	fundefn : fundecl LBRACE block_item_list_opt RBRACE .  (7)

	.  reduce 7


state 47
	block_item_list_opt : block_item block_item_list_opt .  (13)

	.  reduce 13


state 48
	vardecl_comma_list_opt : TP IDENTIFIER .  (10)
	vardecl_comma_list_opt : TP IDENTIFIER . COMMA vardecl_comma_list_opt  (11)

	COMMA  shift 77
	RPAREN  reduce 10


state 49
	fundecl : TP IDENTIFIER LPAREN vardecl_comma_list_opt RPAREN .  (8)

	.  reduce 8


state 50
	exp : exp . PLUS exp  (29)
	exp : exp . PLUSF exp  (30)
	exp : exp . MINUS exp  (31)
	exp : exp . MINUSF exp  (32)
	exp : exp . TIMES exp  (33)
	exp : exp . TIMESF exp  (34)
	exp : exp . DIV exp  (35)
	exp : exp . DIVF exp  (36)
	exp : exp . MOD exp  (37)
	exp : exp . BCEQ exp  (38)
	exp : exp . BCLT exp  (39)
	exp : exp . BCLE exp  (40)
	exp : exp . BCGT exp  (41)
	exp : exp . BCGE exp  (42)
	exp : exp . BCNE exp  (43)
	exp : exp . BLAND exp  (44)
	exp : exp . BLOR exp  (45)
	exp : exp . QMARK exp COLON exp  (47)
	args : exp .  (50)
	args : exp . COMMA args  (51)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIV  shift 61
	MOD  shift 62
	PLUSF  shift 63
	MINUSF  shift 64
	TIMESF  shift 65
	DIVF  shift 66
	COMMA  shift 78
	QMARK  shift 68
	BCEQ  shift 69
	BCGE  shift 70
	BCGT  shift 71
	BCLE  shift 72
	BCLT  shift 73
	BCNE  shift 74
	BLAND  shift 75
	BLOR  shift 76
	RPAREN  reduce 50


state 51
	block_item : IDENTIFIER LPAREN args . RPAREN SEMICOLON  (21)

	RPAREN  shift 79
	.  error


state 52
	block_item : IDENTIFIER EQ exp . SEMICOLON  (20)
	exp : exp . PLUS exp  (29)
	exp : exp . PLUSF exp  (30)
	exp : exp . MINUS exp  (31)
	exp : exp . MINUSF exp  (32)
	exp : exp . TIMES exp  (33)
	exp : exp . TIMESF exp  (34)
	exp : exp . DIV exp  (35)
	exp : exp . DIVF exp  (36)
	exp : exp . MOD exp  (37)
	exp : exp . BCEQ exp  (38)
	exp : exp . BCLT exp  (39)
	exp : exp . BCLE exp  (40)
	exp : exp . BCGT exp  (41)
	exp : exp . BCGE exp  (42)
	exp : exp . BCNE exp  (43)
	exp : exp . BLAND exp  (44)
	exp : exp . BLOR exp  (45)
	exp : exp . QMARK exp COLON exp  (47)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIV  shift 61
	MOD  shift 62
	PLUSF  shift 63
	MINUSF  shift 64
	TIMESF  shift 65
	DIVF  shift 66
	SEMICOLON  shift 80
	QMARK  shift 68
	BCEQ  shift 69
	BCGE  shift 70
	BCGT  shift 71
	BCLE  shift 72
	BCLT  shift 73
	BCNE  shift 74
	BLAND  shift 75
	BLOR  shift 76
	.  error


state 53
	block_item : IF_KW LPAREN exp . RPAREN LBRACE block_item_list_opt RBRACE if_fstat  (14)
	exp : exp . PLUS exp  (29)
	exp : exp . PLUSF exp  (30)
	exp : exp . MINUS exp  (31)
	exp : exp . MINUSF exp  (32)
	exp : exp . TIMES exp  (33)
	exp : exp . TIMESF exp  (34)
	exp : exp . DIV exp  (35)
	exp : exp . DIVF exp  (36)
	exp : exp . MOD exp  (37)
	exp : exp . BCEQ exp  (38)
	exp : exp . BCLT exp  (39)
	exp : exp . BCLE exp  (40)
	exp : exp . BCGT exp  (41)
	exp : exp . BCGE exp  (42)
	exp : exp . BCNE exp  (43)
	exp : exp . BLAND exp  (44)
	exp : exp . BLOR exp  (45)
	exp : exp . QMARK exp COLON exp  (47)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIV  shift 61
	MOD  shift 62
	PLUSF  shift 63
	MINUSF  shift 64
	TIMESF  shift 65
	DIVF  shift 66
	RPAREN  shift 81
	QMARK  shift 68
	BCEQ  shift 69
	BCGE  shift 70
	BCGT  shift 71
	BCLE  shift 72
	BCLT  shift 73
	BCNE  shift 74
	BLAND  shift 75
	BLOR  shift 76
	.  error


state 54
	block_item : DO_KW LBRACE block_item_list_opt . RBRACE WHILE_KW LPAREN exp RPAREN SEMICOLON  (19)

	RBRACE  shift 82
	.  error


state 55
	block_item : WHILE_KW LPAREN exp . RPAREN LBRACE block_item_list_opt RBRACE  (18)
	exp : exp . PLUS exp  (29)
	exp : exp . PLUSF exp  (30)
	exp : exp . MINUS exp  (31)
	exp : exp . MINUSF exp  (32)
	exp : exp . TIMES exp  (33)
	exp : exp . TIMESF exp  (34)
	exp : exp . DIV exp  (35)
	exp : exp . DIVF exp  (36)
	exp : exp . MOD exp  (37)
	exp : exp . BCEQ exp  (38)
	exp : exp . BCLT exp  (39)
	exp : exp . BCLE exp  (40)
	exp : exp . BCGT exp  (41)
	exp : exp . BCGE exp  (42)
	exp : exp . BCNE exp  (43)
	exp : exp . BLAND exp  (44)
	exp : exp . BLOR exp  (45)
	exp : exp . QMARK exp COLON exp  (47)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIV  shift 61
	MOD  shift 62
	PLUSF  shift 63
	MINUSF  shift 64
	TIMESF  shift 65
	DIVF  shift 66
	RPAREN  shift 83
	QMARK  shift 68
	BCEQ  shift 69
	BCGE  shift 70
	BCGT  shift 71
	BCLE  shift 72
	BCLT  shift 73
	BCNE  shift 74
	BLAND  shift 75
	BLOR  shift 76
	.  error


state 56
	exp : IDENTIFIER LPAREN . args RPAREN  (48)
	args : .  (49)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	RPAREN  reduce 49

	exp  goto 50
	args  goto 84


state 57
	exp : LPAREN exp . RPAREN  (28)
	exp : exp . PLUS exp  (29)
	exp : exp . PLUSF exp  (30)
	exp : exp . MINUS exp  (31)
	exp : exp . MINUSF exp  (32)
	exp : exp . TIMES exp  (33)
	exp : exp . TIMESF exp  (34)
	exp : exp . DIV exp  (35)
	exp : exp . DIVF exp  (36)
	exp : exp . MOD exp  (37)
	exp : exp . BCEQ exp  (38)
	exp : exp . BCLT exp  (39)
	exp : exp . BCLE exp  (40)
	exp : exp . BCGT exp  (41)
	exp : exp . BCGE exp  (42)
	exp : exp . BCNE exp  (43)
	exp : exp . BLAND exp  (44)
	exp : exp . BLOR exp  (45)
	exp : exp . QMARK exp COLON exp  (47)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIV  shift 61
	MOD  shift 62
	PLUSF  shift 63
	MINUSF  shift 64
	TIMESF  shift 65
	DIVF  shift 66
	RPAREN  shift 85
	QMARK  shift 68
	BCEQ  shift 69
	BCGE  shift 70
	BCGT  shift 71
	BCLE  shift 72
	BCLT  shift 73
	BCNE  shift 74
	BLAND  shift 75
	BLOR  shift 76
	.  error


state 58
	exp : exp PLUS . exp  (29)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 86


state 59
	exp : exp MINUS . exp  (31)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 87


state 60
	exp : exp TIMES . exp  (33)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 88


state 61
	exp : exp DIV . exp  (35)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 89


state 62
	exp : exp MOD . exp  (37)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 90


state 63
	exp : exp PLUSF . exp  (30)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 91


state 64
	exp : exp MINUSF . exp  (32)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 92


state 65
	exp : exp TIMESF . exp  (34)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 93


state 66
	exp : exp DIVF . exp  (36)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 94


state 67
	block_item : RETURN_KW exp SEMICOLON .  (15)

	.  reduce 15


state 68
	exp : exp QMARK . exp COLON exp  (47)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 95


state 69
	exp : exp BCEQ . exp  (38)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 96


state 70
	exp : exp BCGE . exp  (42)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 97


state 71
	exp : exp BCGT . exp  (41)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 98


state 72
	exp : exp BCLE . exp  (40)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 99


state 73
	exp : exp BCLT . exp  (39)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 100


state 74
	exp : exp BCNE . exp  (43)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 101


state 75
	exp : exp BLAND . exp  (44)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 102


state 76
	exp : exp BLOR . exp  (45)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	.  error

	exp  goto 103


state 77
	vardecl_comma_list_opt : TP IDENTIFIER COMMA . vardecl_comma_list_opt  (11)
	vardecl_comma_list_opt : .  (9)

	TP  shift 29
	RPAREN  reduce 9

	vardecl_comma_list_opt  goto 104


state 78
	args : exp COMMA . args  (51)
	args : .  (49)

	IDENTIFIER  shift 39
	STRINGCONSTANT  shift 40
	FLOATCONSTANT  shift 41
	BOOLCONSTANT  shift 42
	INTCONSTANT  shift 43
	LPAREN  shift 44
	RPAREN  reduce 49

	exp  goto 50
	args  goto 105


state 79
	block_item : IDENTIFIER LPAREN args RPAREN . SEMICOLON  (21)

	SEMICOLON  shift 106
	.  error


state 80
	block_item : IDENTIFIER EQ exp SEMICOLON .  (20)

	.  reduce 20


state 81
	block_item : IF_KW LPAREN exp RPAREN . LBRACE block_item_list_opt RBRACE if_fstat  (14)

	LBRACE  shift 107
	.  error


state 82
	block_item : DO_KW LBRACE block_item_list_opt RBRACE . WHILE_KW LPAREN exp RPAREN SEMICOLON  (19)

	WHILE_KW  shift 108
	.  error


state 83
	block_item : WHILE_KW LPAREN exp RPAREN . LBRACE block_item_list_opt RBRACE  (18)

	LBRACE  shift 109
	.  error


state 84
	exp : IDENTIFIER LPAREN args . RPAREN  (48)

	RPAREN  shift 110
	.  error


state 85
	exp : LPAREN exp RPAREN .  (28)

	.  reduce 28

